[gd_scene load_steps=5 format=3 uid="uid://c3wmjn5wjwp7k"]

[ext_resource type="Script" path="res://Player/Player_Fight/throwable.gd" id="1_e3cvn"]
[ext_resource type="Texture2D" uid="uid://5fkd3ehevdgg" path="res://images/Terrain/Dirt/Dirt1_allmostbroken.png" id="1_omrhm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_b1jr7"]
radius = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_sv53e"]
radius = 48.0

[node name="Throwable" type="Node2D"]
script = ExtResource("1_e3cvn")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_omrhm")

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_b1jr7")

[node name="Reach" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Reach"]
shape = SubResource("CircleShape2D_sv53e")

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_entered" from="Reach" to="." method="_on_reach_body_entered"]
[connection signal="body_exited" from="Reach" to="." method="_on_reach_body_exited"]
